# prodromos

./: .gitattributes  .gitignore  CITATION.cff  DECISIONS.md  LICENSE  QUICK_START.md  README.md  ROADMAP.md  pyproject.toml
docs/: ALTERNATIVES_AND_ROLE_AWARE_NEB.md  EVIDENCE_FRAMEWORK_V2_COMPLETE.md  GAME_THEORETIC_NEB_FOUNDATIONS.md  MAGNETIC_FIRST_PREFLIGHT_PLAN.md  MULTI_ENDPOINT_METHODOLOGY_V3.md  NEB_METHOD_ADVISOR_DESIGN.md  NEB_STALL_DIAGNOSTIC_PLAYBOOK.md  README.md  THEORY_PENT_CONVERGENCE.md  other_tools.md
src/prodromos/: __init__.py  __main__.py  adaptive_neb_planner.py  admm_neb_prototype.py  cli_contract.py  electron_parity_gate.py  endpoint_provenance_gate.py  external_reference_gate.py  from_inputs.py  gp_neb_surrogate.py  h_barrier_paper_readiness.py  lint_dft_script.py  lj7_stress_test.py  magnetic_band_gate.py  magnetic_dataset_scan.py  magnetic_endpoint_gate.py  magnetic_gp_neb_driver.py  magnetic_gp_neb_update.py  magnetic_output_parser.py  magnetic_provenance.py  magnetic_recommendation.py  master_equation_kinetics.py  (+19 more)
tests/: README.md  conftest.py  test_adaptive_reparam.py  test_cli_contracts.py  test_electron_parity_gate.py  test_endpoint_provenance_gate.py  test_enumeration.py  test_external_reference_gate.py  test_from_inputs.py  test_from_inputs_glue.py  test_h_barrier_paper_readiness.py  test_lint_dft_script.py  test_lj7.py  test_magnetic_band_gate.py  test_magnetic_dataset_scan.py  test_magnetic_endpoint_gate.py  test_magnetic_gp_neb_driver.py  test_magnetic_gp_neb_update.py  test_magnetic_output_parser.py  test_magnetic_provenance.py  test_magnetic_recommendation.py  test_master_equation.py  test_mcp_server.py  test_mcp_transport.py  test_mecp.py  test_mic_alignment_gate.py  test_mlip_confidence_gate.py  test_neb_agm.py  test_neb_algorithm_planners.py  test_neb_method_advisor.py  test_path_convergence.py  test_per_image_surrogate.py  test_ph_neb_diagnostic.py  test_plan_adapters.py  test_plan_calibrate.py  test_plan_cli.py  test_plan_graph.py  test_plan_registry.py  test_plan_route.py  test_plan_score.py  (+9 more)
(+25 files in other folders)
