[project]
name = "tm-prodromos"
version = "0.1.0"
description = "Prodromos — a $0 pre-flight/post-flight diagnostic gate that predicts whether an expensive DFT NEB / saddle search on Fe-S minerals will converge, before spending it on an A100."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary (Third Matter internal)" }
authors = [
    { name = "Igor Morozov", email = "igor@exopoiesis.space" },
]
keywords = ["dft", "neb", "transition-state", "saddle-point", "minimum-energy-path", "fe-s", "preflight", "ai4science"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "ase>=3.23",
    "spglib>=2.1",
    "scikit-learn>=1.3",
    "dscribe>=2.1",
    "networkx>=3.0",
    "matplotlib>=3.7",
    "gudhi>=3.9",
    "pot>=0.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.scripts]
prodromos = "prodromos.__main__:main"

[project.urls]
Homepage = "https://github.com/exopoiesis/prodromos"
Issues = "https://github.com/exopoiesis/prodromos/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prodromos"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "slow: mark test as slow (skip with -m 'not slow')",
    "integration: integration test (multiple modules)",
    "requires_data: requires harvested DFT data",
]
